fixed data analysis

--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,8 +73,7 @@
     "    'Telephone',\n",
     "    'foreign worker',\n",
     "    'label']\n",
-    "# FIXME The labels overwrite the first row.\n",
-    "# print(data.iloc[0])\n",
+    "\n",
     "numeric_columns = ['Duration in month', 'Credit amount', 'Installment rate in percentage of disposable income', 'Present residence since', 'Age in years', 'Number of existing credits at this bank', 'Number of people being liable to provide maintenance for']\n",
     "\n",
     "young_group = data[data['Age in years'] <= 25]\n",
@@ -83,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Printing the young group value counts for each column\nA11    68\nA12    62\nA14    50\nA13    10\nName: Status of existing checking account, dtype: int64\nA32    137\nA34     33\nA31      8\nA33      7\nA30      5\nName: Credit history, dtype: int64\nA43    64\nA42    52\nA40    32\nA41    14\nA49    10\nA46     7\nA45     6\nA44     4\nA48     1\nName: Purpose, dtype: int64\nA61    123\nA65     28\nA62     22\nA63     11\nA64      6\nName: Savings account/bonds, dtype: int64\nA73    78\nA72    54\nA74    36\nA75    13\nA71     9\nName: Present employment since, dtype: int64\nA92    105\nA93     56\nA94     27\nA91      2\nName: Personal status and sex, dtype: int64\nA101    170\nA103     11\nA102      9\nName: Other debtors / guarantors, dtype: int64\nA123    71\nA121    60\nA122    47\nA124    12\nName: Property, dtype: int64\nA143    161\nA141     20\nA142      9\nName: Other installment plans, dtype: int64\nA152    106\nA151     79\nA153      5\nName: Housing, dtype: int64\nA173    138\nA172     42\nA174      5\nA171      5\nName: Job, dtype: int64\nA191    145\nA192     45\nName: Telephone, dtype: int64\nA201    187\nA202      3\nName: foreign worker, dtype: int64\n1    110\n2     80\nName: label, dtype: int64\n"
+      "Printing the young group value counts for each column\nA11    68\nA12    62\nA14    50\nA13    10\nName: Status of existing checking account, dtype: int64\nA32    137\nA34     33\nA31      8\nA33      7\nA30      5\nName: Credit history, dtype: int64\nA43    64\nA42    52\nA40    32\nA41    14\nA49    10\nA46     7\nA45     6\nA44     4\nA48     1\nName: Purpose, dtype: int64\nA61    123\nA65     28\nA62     22\nA63     11\nA64      6\nName: Savings account/bonds, dtype: int64\nA73    78\nA72    54\nA74    36\nA75    13\nA71     9\nName: Present employment since, dtype: int64\nA92    105\nA93     56\nA94     27\nA91      2\nName: Personal status and sex, dtype: int64\nA101    170\nA103     11\nA102      9\nName: Other debtors / guarantors, dtype: int64\nA123    71\nA121    60\nA122    47\nA124    12\nName: Property, dtype: int64\nA143    161\nA141     20\nA142      9\nName: Other installment plans, dtype: int64\nA152    106\nA151     79\nA153      5\nName: Housing, dtype: int64\nA173    138\nA172     42\nA171      5\nA174      5\nName: Job, dtype: int64\nA191    145\nA192     45\nName: Telephone, dtype: int64\nA201    187\nA202      3\nName: foreign worker, dtype: int64\n1    110\n2     80\nName: label, dtype: int64\n"
      ]
     }
    ],
@@ -103,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Printing the aged group value counts for each column\nA14    344\nA12    207\nA11    205\nA13     53\nName: Status of existing checking account, dtype: int64\nA32    393\nA34    259\nA33     81\nA31     41\nA30     35\nName: Credit history, dtype: int64\nA43     215\nA40     202\nA42     129\nA41      89\nA49      87\nA46      43\nA45      16\nA410     12\nA44       8\nA48       8\nName: Purpose, dtype: int64\nA61    480\nA65    154\nA62     81\nA63     52\nA64     42\nName: Savings account/bonds, dtype: int64\nA73    261\nA75    239\nA74    138\nA72    118\nA71     53\nName: Present employment since, dtype: int64\nA93    491\nA92    205\nA94     65\nA91     48\nName: Personal status and sex, dtype: int64\nA101    736\nA103     41\nA102     32\nName: Other debtors / guarantors, dtype: int64\nA123    261\nA121    221\nA122    185\nA124    142\nName: Property, dtype: int64\nA143    652\nA141    119\nA142     38\nName: Other installment plans, dtype: int64\nA152    606\nA153    103\nA151    100\nName: Housing, dtype: int64\nA173    491\nA172    158\nA174    143\nA171     17\nName: Job, dtype: int64\nA191    451\nA192    358\nName: Telephone, dtype: int64\nA201    775\nA202     34\nName: foreign worker, dtype: int64\n1    589\n2    220\nName: label, dtype: int64\n"
+      "Printing the aged group value counts for each column\nA14    344\nA12    207\nA11    205\nA13     53\nName: Status of existing checking account, dtype: int64\nA32    393\nA34    259\nA33     81\nA31     41\nA30     35\nName: Credit history, dtype: int64\nA43     215\nA40     202\nA42     129\nA41      89\nA49      87\nA46      43\nA45      16\nA410     12\nA48       8\nA44       8\nName: Purpose, dtype: int64\nA61    480\nA65    154\nA62     81\nA63     52\nA64     42\nName: Savings account/bonds, dtype: int64\nA73    261\nA75    239\nA74    138\nA72    118\nA71     53\nName: Present employment since, dtype: int64\nA93    491\nA92    205\nA94     65\nA91     48\nName: Personal status and sex, dtype: int64\nA101    736\nA103     41\nA102     32\nName: Other debtors / guarantors, dtype: int64\nA123    261\nA121    221\nA122    185\nA124    142\nName: Property, dtype: int64\nA143    652\nA141    119\nA142     38\nName: Other installment plans, dtype: int64\nA152    606\nA153    103\nA151    100\nName: Housing, dtype: int64\nA173    491\nA172    158\nA174    143\nA171     17\nName: Job, dtype: int64\nA191    451\nA192    358\nName: Telephone, dtype: int64\nA201    775\nA202     34\nName: foreign worker, dtype: int64\n1    589\n2    220\nName: label, dtype: int64\n"
      ]
     }
    ],
@@ -123,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,14 +143,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Duration in month\nmean: 20.96786155747837\nvariance 144.53856980259212\n\nCredit amount\nmean: 3336.7750309023486\nvariance 7961090.639920327\n\nInstallment rate in percentage of disposable income\nmean: 3.004944375772559\nvariance 1.2227478001199379\n\nPresent residence since\nmean: 2.850432632880099\nvariance 1.186760332399124\n\nAge in years\nmean: 38.427688504326326\nvariance 113.53467794245432\n\nNumber of existing credits at this bank\nmean: 1.4449938195302843\nvariance 0.35866612001125947\n\nNumber of people being liable to provide maintenance for\nmean: 1.1841779975278122\nvariance 0.1504424237232129\n\n"
+      "Duration in month\n",
+      "mean: 20.96786155747837\n",
+      "variance 144.53856980259212\n",
+      "\n",
+      "Credit amount\n",
+      "mean: 3336.7750309023486\n",
+      "variance 7961090.639920327\n",
+      "\n",
+      "Installment rate in percentage of disposable income\n",
+      "mean: 3.004944375772559\n",
+      "variance 1.2227478001199379\n",
+      "\n",
+      "Present residence since\n",
+      "mean: 2.850432632880099\n",
+      "variance 1.186760332399124\n",
+      "\n",
+      "Age in years\n",
+      "mean: 38.427688504326326\n",
+      "variance 113.53467794245432\n",
+      "\n",
+      "Number of existing credits at this bank\n",
+      "mean: 1.4449938195302843\n",
+      "variance 0.35866612001125947\n",
+      "\n",
+      "Number of people being liable to provide maintenance for\n",
+      "mean: 1.1841779975278122\n",
+      "variance 0.1504424237232129\n",
+      "\n"
      ]
     }
    ],
@@ -196,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +363,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 82
+     "execution_count": 10
     }
    ],
    "source": [
@@ -358,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +581,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 88
+     "execution_count": 16
     }
    ],
    "source": [
@@ -574,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -681,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +750,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 92
+     "execution_count": 20
     }
    ],
    "source": [
@@ -741,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -769,14 +795,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "nb_classifier accuracy on the underprivileged group:  0.5384615384615384\nnb_classifier accuracy on the privileged group:  0.7247474747474747\nnb_cnd accuracy on the underprivileged group:  0.6346153846153846\nnb_cnd accuracy on the privileged group:  0.7045454545454546\n"
+      "nb_classifier accuracy on the underprivileged group:  0.5385\nnb_classifier accuracy on the privileged group:  0.7247\nnb_cnd accuracy on the underprivileged group:  0.6346\nnb_cnd accuracy on the privileged group:  0.7045\n"
      ]
     }
    ],
@@ -801,8 +827,8 @@
     "    accuracy_up = metrics.accuracy_score(y_test_up, predictions_up)\n",
     "    accuracy_p = metrics.accuracy_score(y_test_p, predictions_p)\n",
     "\n",
-    "    print(names[i], 'accuracy on the underprivileged group: ', accuracy_up)\n",
-    "    print(names[i], 'accuracy on the privileged group: ', accuracy_p)"
+    "    print(names[i], 'accuracy on the underprivileged group: ', round(accuracy_up, 4))\n",
+    "    print(names[i], 'accuracy on the privileged group: ', round(accuracy_p, 4))"
    ]
   }
  ]
