fixed data analysis

--- a/implementation/implementation.ipynb
+++ b/implementation/implementation.ipynb
@@ -42,14 +42,14 @@
     "import pandas as pd\n",
     "import re\n",
     "\n",
-    "with open('../german-credit-dataset/german.data', 'r') as infile:\n",
+    "with open('german.data', 'r') as infile:\n",
     "    data_contents = infile.read()    \n",
     "    data_contents = re.sub(r' ', \",\", data_contents)\n",
     "\n",
-    "    with open('../german-credit-dataset/german.csv', 'w') as outfile:\n",
+    "    with open('german.csv', 'w') as outfile:\n",
     "        outfile.write(data_contents)\n",
     "\n",
-    "data = pd.read_csv('../german-credit-dataset/german.csv')\n",
+    "data = pd.read_csv('german.csv')\n",
     "\n",
     "data.columns = [\n",
     "    'Status of existing checking account', \n",
@@ -228,7 +228,7 @@
    "source": [
     "import re\n",
     "\n",
-    "with open('../german-credit-dataset/german.data-numeric', 'r') as infile:\n",
+    "with open('german.data-numeric', 'r') as infile:\n",
     "    data_contents = infile.read()    \n",
     "    data_contents = re.sub(r'[ ]+', \",\", data_contents)\n",
     "    data_contents = re.sub(r'^,', \"\", data_contents)\n",
@@ -236,7 +236,7 @@
     "    data_contents = re.sub(r',\\n', \"\\n\", data_contents)\n",
     "    # data_contents = re.sub(r'^,|\\n,|,\\n', \"\\n\", data_contents)\n",
     "\n",
-    "    with open('../german-credit-dataset/german-numeric.csv', 'w') as outfile:\n",
+    "    with open('german-numeric.csv', 'w') as outfile:\n",
     "        outfile.write(data_contents)"
    ]
   },
@@ -267,8 +267,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# data = pd.read_csv('../german-credit-dataset/german.csv')\n",
-    "data = pd.read_csv('../german-credit-dataset/german-numeric.csv', header=None)\n",
+    "data = pd.read_csv('german-numeric.csv', header=None)\n",
     "data.columns = [\n",
     "    'A1',\n",
     "    'A2',\n",
